Social hub assigment added

--- a/WebSiteForStaraZagora/index.html
+++ b/WebSiteForStaraZagora/index.html
@@ -33,18 +33,18 @@
         }
         
     </script>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/WebSiteForStaraZagora/cssSiteForStaraZagora/css/style.css">
 </head>
 <body onload="script();">
     <div id="start" class="bg-line w-full z-50 flex-col gap-1 flex justify-center items-center h-screen absolute">
-        <img class="m-4 bounce-in-top w-24 h-24" src="/images/logo.png" alt="">
+        <img class="m-4 bounce-in-top w-24 h-24" src="/WebSiteForStaraZagora/images/logo.png" alt="">
     </div>
     <div id="main" class="hidden flex flex-col w-full min-h-screen bg-container gap-2">
 <!--        //menu-->
         <div class="sticky top-0 w-full flex bg-container z-40 flex-col">
             <div class="flex w-full py-5 px-24 gap-12 items-end">
                 <div class="flex-grow relative h-full">
-                    <img class="absolute -top-10 left-0 h-20 w-20" alt="" src="/images/logo.png">
+                    <img class="absolute -top-10 left-0 h-20 w-20" alt="" src="/WebSiteForStaraZagora/images/logo.png">
                 </div>
                 <a href="#home" class="text-menu_text font-bold text-2xl underline">Начало</a>
                 <a href="#zabelevitelnosti" class="text-menu_text font-bold text-2xl underline">Забележителности</a>
@@ -57,10 +57,10 @@
 <!--            //home-->
             <div id="home" class="relative flex flex-col gap-32">
                 <div class="absolute w-full h-full pb-72">
-                    <img class="w-full h-full" src="/images/bg.png" alt="">
+                    <img class="w-full h-full" src="/WebSiteForStaraZagora/images/bg.png" alt="">
                 </div>
                 <div class="flex z-10 p-12 justify-between gap-12 items-center">
-                    <img class="w-6/12" src="/images/home.png" alt="">
+                    <img class="w-6/12" src="/WebSiteForStaraZagora/images/home.png" alt="">
                     <div class="flex flex-col gap-6 items-end justify-start w-full">
                         <div class="text-menu_text font-bold text-right text-4xl">Добре дошли в Стара Загора!</div>
                         <div class="text-lg text-black text-right font-bold">Стара Загора е град с богата културно-историческа, както и природна база.</div>
@@ -72,7 +72,7 @@
                 <div class="grid grid-cols-3 gap-32 z-10">
                     <div class="h-96 w-full bg-rec"></div>
                     <div class="h-96 w-full bg-rec p-8">
-                        <img class="h-full w-full" src="/images/gerb.png" alt="">
+                        <img class="h-full w-full" src="/WebSiteForStaraZagora/images/gerb.png" alt="">
                     </div>
                     <div class="h-96 w-full bg-rec"></div>
                 </div>
@@ -82,7 +82,7 @@
 
 <!--            //Nikolai-->
             <div class="relative mt-24 flex gap-24 ">
-                <img class="w-full h-full absolute -z-1" src="/images/bg.png" alt="">
+                <img class="w-full h-full absolute -z-1" src="/WebSiteForStaraZagora/images/bg.png" alt="">
                 <div class="flex gap-24 z-10 w-full p-12">
                     <div class="flex flex-col gap-6 items-start justify-start w-full">
                         <div class="text-menu_text font-bold text-4xl">Започваме с църквата “Свети Николай Чудотворец”</div>
@@ -103,20 +103,20 @@
                         </div>
                     </div>
                     <div class="flex flex-col gap-6 items-start justify-start">
-                        <img class="w-full" src="/images/curkwa.png" alt="">
-                        <img class="w-full" src="/images/pingwini.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/curkwa.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/pingwini.png" alt="">
                     </div>
                 </div>
             </div>
 
 <!--            //Aqzmo-->
             <div class="relative mt-24 flex gap-24 ">
-                <img class="w-full h-full absolute -z-1" src="/images/bg.png" alt="">
+                <img class="w-full h-full absolute -z-1" src="/WebSiteForStaraZagora/images/bg.png" alt="">
                 <div class="flex gap-24 z-10 w-full p-12">
 
                     <div class="flex flex-col gap-6 items-start justify-start">
-                        <img class="w-full" src="/images/aqzmo1.png" alt="">
-                        <img class="w-full" src="/images/aqzmo2.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/aqzmo1.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/aqzmo2.png" alt="">
                     </div>
                     <div class="flex flex-col gap-6 items-start justify-start w-full">
                         <div class="text-menu_text font-bold text-4xl">Парк "Аязмото”</div>
@@ -141,7 +141,7 @@
 
 <!--            //samarsko-->
             <div class="relative mt-24 flex gap-24 ">
-                <img class="w-full h-full absolute -z-1" src="/images/bg.png" alt="">
+                <img class="w-full h-full absolute -z-1" src="/WebSiteForStaraZagora/images/bg.png" alt="">
                 <div class="flex gap-24 z-10 w-full p-12">
                     <div class="flex flex-col gap-6 items-start justify-start w-full">
                         <div class="text-menu_text font-bold text-4xl">Самарското знаме</div>
@@ -164,20 +164,20 @@
                         </div>
                     </div>
                     <div class="flex flex-col gap-6 items-start justify-start">
-                        <img class="w-full" src="/images/samarsko1.png" alt="">
-                        <img class="w-full" src="/images/samrsko2.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/samarsko1.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/samrsko2.png" alt="">
                     </div>
                 </div>
             </div>
 
 <!--            //bede4ka-->
             <div class="relative mt-24 flex gap-24 ">
-                <img class="w-full h-full absolute -z-1" src="/images/bg.png" alt="">
+                <img class="w-full h-full absolute -z-1" src="/WebSiteForStaraZagora/images/bg.png" alt="">
                 <div class="flex gap-24 z-10 w-full p-12">
 
                     <div class="flex flex-col gap-6 items-start justify-start">
-                        <img class="w-full" src="/images/bede4ka1.png" alt="">
-                        <img class="w-full" src="/images/bede4ka2.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/bede4ka1.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/bede4ka2.png" alt="">
                     </div>
                     <div class="flex flex-col gap-6 items-start justify-start w-full">
                         <div class="text-menu_text font-bold text-4xl">Парк Бедечка</div>
@@ -211,7 +211,7 @@
 
 <!--            //opera-->
             <div class="relative mt-24 flex gap-24 ">
-                <img class="w-full h-full absolute -z-1" src="/images/bg.png" alt="">
+                <img class="w-full h-full absolute -z-1" src="/WebSiteForStaraZagora/images/bg.png" alt="">
                 <div class="flex gap-24 z-10 w-full p-12">
                     <div class="flex flex-col gap-6 items-start justify-start w-full">
                         <div class="text-menu_text font-bold text-4xl">Операта </div>
@@ -237,8 +237,8 @@
                         </div>
                     </div>
                     <div class="flex flex-col gap-6 items-start justify-start">
-                        <img class="w-full" src="/images/opera1.png" alt="">
-                        <img class="w-full" src="/images/opera2.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/opera1.png" alt="">
+                        <img class="w-full" src="/WebSiteForStaraZagora/images/opera2.png" alt="">
                     </div>
                 </div>
             </div>
